# Yuggoth

./: .clang-format  CMakeLists.txt  README.md
cmake/: helpers.cmake  (+3 more)
yuggoth/: CMakeLists.txt
yuggoth/application/: application.cpp  application.h  application_context.h  application_settings_parser.cpp  application_settings_parser.h  performance_counters.h  window_manager.cpp  window_manager.h  yuggoth.cpp  yuggoth.h
yuggoth/asset/: asset_manager.cpp  asset_storage.cpp  buffer_owning_model.cpp  khronos_loader.cpp  model.cpp  model_loader.cpp  primitives.cpp  renderable.cpp  resource_owning_model.cpp  wavefront_loader.cpp
yuggoth/asset/core/: asset.h  asset_manager.cpp  asset_manager.h  asset_registry.cpp  asset_registry.h  asset_storage.cpp  asset_storage.h  renderable.cpp  renderable.h
yuggoth/asset/include/: asset.h  asset_manager.h  asset_storage.h  buffer_owning_model.h  material.h  mesh.h  model.h  model_base.h  model_loader.h  primitives.h  renderable.h  resource_owning_model.h
yuggoth/asset/material/: material.h  material_manager.cpp  material_manager.h
yuggoth/asset/model/: khronos_loader.cpp  mesh.h  model.cpp  model.h  model_storage.cpp  model_storage.h  primitives.cpp  wavefront_loader.cpp
yuggoth/core/: core.cpp  image_wrapper.cpp  random_number_generator.cpp  uuid.cpp
yuggoth/core/allocators/: free_list_allocator.cpp  free_list_allocator.h  linear_allocator.cpp  linear_allocator.h  object_pool.h  object_pool.ipp  slab_allocator.cpp  slab_allocator.h  virtual_allocator.cpp  virtual_allocator.h  virtual_allocator_types.h
yuggoth/core/include/: config.h.in  core.h  core_types.h  mask.h  random_number_generator.h  type_tools.h  uuid.h
yuggoth/core/intrusive/: intrusive_pointer.h  intrusive_pointer.ipp  intrusive_reference_counter.h
yuggoth/core/logger/: logger.cpp  logger.h  logger.ipp
yuggoth/core/threading/: task.h  task_system.cpp  task_system.h  task_system.ipp
yuggoth/core/tools/: config.h.in  core.cpp  core.h  core_types.h  counter.h  filesystem.cpp  filesystem.h  image_wrapper.cpp  image_wrapper.h  mask.h  random_number_generator.cpp  random_number_generator.h  span.h  tools.h  uuid.cpp  uuid.h  yuggoth_asserts.cpp  yuggoth_asserts.h  yuggoth_macros.h
yuggoth/editor/core/: editor.cpp  editor.h  editor.ipp  editor_context.h  editor_tools.cpp  editor_tools.h  editor_window.cpp  editor_window.h  selection_manager.cpp  selection_manager.h
yuggoth/editor/editor_windows/: application_window.cpp  application_window.h  asset_manager_window.cpp  asset_manager_window.h  console_window.cpp  console_window.h  console_window_sink.cpp  console_window_sink.h  editor_windows.h  hierarchy_window.cpp  hierarchy_window.h  inspector_window.cpp  inspector_window.h  renderer_window.cpp  renderer_window.h  viewport_window.cpp  viewport_window.h
yuggoth/graphics/acceleration/: acceleration.cpp  acceleration.h  acceleration_structure.cpp  acceleration_structure.h  acceleration_structure_tools.cpp  acceleration_structure_tools.h  bottom_level_acceleration_structure.cpp  bottom_level_geometry.cpp  bottom_level_geometry.h  shader_binding_table.cpp  shader_binding_table.h  top_level_acceleration_structure.cpp
yuggoth/graphics/buffer/: buffer.cpp  buffer.h  buffer.ipp  buffer_create_information.cpp  buffer_create_information.h
yuggoth/graphics/command/: command_buffer.cpp  command_buffer.h  command_buffer.ipp  command_pool.cpp  command_pool.h
yuggoth/graphics/core/: graphics_allocator.cpp  graphics_allocator.h  graphics_common.h  graphics_context.cpp  graphics_context.h  graphics_context_device.cpp  graphics_context_types.h  graphics_enums.h  graphics_masks.h  graphics_specifications.h  graphics_structures.cpp  graphics_structures.h  graphics_types.cpp  graphics_types.h  structure_tools.cpp  structure_tools.h  synchronization.cpp  synchronization.h  vma_allocator_types.h
yuggoth/graphics/descriptors/: descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h
yuggoth/graphics/graphics_context/: graphics_allocator.cpp  graphics_allocator.h  graphics_context.cpp  graphics_context.h  graphics_tools.cpp  graphics_tools.h  graphics_virtual_allocator.cpp  graphics_virtual_allocator.h
yuggoth/graphics/image/: image.cpp  image.h  image2D.cpp  image2D.h  image_create_information.cpp  image_create_information.h  image_depth.cpp  image_depth.h  sampler.cpp  sampler.h
yuggoth/graphics/pipeline/: compute_pipeline.cpp  compute_pipeline.h  descriptors.h  graphics_pipeline.cpp  graphics_pipeline.h  pipeline.cpp  pipeline.h  pipeline_create_information.cpp  pipeline_create_information.h  pipeline_tools.cpp  pipeline_tools.h  ray_tracing_pipeline.cpp  ray_tracing_pipeline.h  shader_module.cpp  shader_module.h
yuggoth/graphics/presentation/: surface.cpp  surface.h  swapchain.cpp  swapchain.h
yuggoth/graphics/synchronization/: fence.cpp  fence.h  semaphore.cpp  semaphore.h
yuggoth/graphics/wrappers/: graphics_formats.cpp  graphics_formats.h  graphics_masks.h  graphics_structures.cpp  graphics_structures.h
yuggoth/graphics_device/: buffer_allocator.cpp  buffer_manager.cpp  frame.cpp  graphics_allocator.cpp  graphics_device.cpp  graphics_device.h  graphics_device_types.h  graphics_tools.h
yuggoth/graphics_device/core/: common_types.h  graphics_device.cpp  graphics_device.h  graphics_device_types.cpp  graphics_device_types.h
yuggoth/graphics_device/include/: buffer_manager.h
yuggoth/graphics_device/systems/: buffer_allocator.cpp  buffer_allocator.h  buffer_manager.cpp  buffer_manager.h  buffer_manager.ipp  frame.cpp  frame.h  resource_manager.cpp  resource_manager.h  resource_manager.ipp  resource_manager_types.h
yuggoth/gui/imgui/: imgui_host.cpp  imgui_host.h  imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h
yuggoth/gui/window/: event.h  event_kind.cpp  event_kind.h  key_events.h  mouse_events.h  window.cpp  window.h  window_events.h
yuggoth/mathematics/: transform.cpp
yuggoth/memory/: buffer_allocator.cpp  buffer_manager.cpp
yuggoth/model/: khronos_loader.cpp  model.cpp
yuggoth/renderer/: scene_renderer.cpp
(+85 files in other folders)
